Set up the User Interface to set the 3 tiers of client impression network loss (nested ad tag bounce) rates. Tomorrow the controller actions and report adjustments will be implemented and that should wrap this critical feature fix up.

--- a/upload/public/css/style.css
+++ b/upload/public/css/style.css
@@ -802,3 +802,7 @@ padding:0;
 	margin-top: 10px;
 	margin-left: 20px;
 }
+
+.qtip-content {
+    font-size:12px;
+}
